--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="https://static.wikia.nocookie.net/leagueoflegends/images/8/8e/Pyke_AshenKnightSkin.jpg/revision/latest/scale-to-width-down/1000?cb=20220318163940" class="d-block w-100 imgCarrousel" alt="Pyke img1">
+                            <img src="Fotos/Pyke_AshenKnightSkin.jpg" class="d-block w-100 imgCarrousel" alt="Pyke img1">
                             <div class="carousel-caption d-none d-md-block">
                               <em><h5 class="textoCarrousel">Ashen Knight Pyke</h5></em>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="https://static.wikia.nocookie.net/leagueoflegends/images/3/37/Pyke_EmpyreanSkin.jpg/revision/latest/scale-to-width-down/1000?cb=20221020205053" class="d-block w-100 imgCarrousel" alt="Pyke img2">
+                            <img src="Fotos/Pyke_EmpyreanSkin.jpg" class="d-block w-100 imgCarrousel" alt="Pyke img2">
                             <div class="carousel-caption d-none d-md-block">
                               <em><h5 class="textoCarrousel">Empyrean Pyke</h5></em>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="https://static.wikia.nocookie.net/leagueoflegends/images/7/7e/Pyke_PrestigeSoulFighterSkin.jpg/revision/latest/scale-to-width-down/1000?cb=20230716175424" class="d-block w-100 imgCarrousel" alt="Pyke img3">
+                            <img src="Fotos/Pyke_PrestigeSoulFighterSkin.jpg" class="d-block w-100 imgCarrousel" alt="Pyke img3">
                             <div class="carousel-caption d-none d-md-block">
                               <em><h5 class="textoCarrousel">Prestige Soul Fighter Pyke</h5></em>
                             </div>
@@ -88,19 +88,19 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="https://static.wikia.nocookie.net/leagueoflegends/images/a/a2/Kindred_PrestigePorcelainSkin.jpg/revision/latest/scale-to-width-down/1000?cb=20240206225627" class="d-block w-100 imgCarrousel" alt="Kingred img1">
+                            <img src="Fotos/Kindred_PrestigePorcelainSkin.jpg" class="d-block w-100 imgCarrousel" alt="Kingred img1">
                             <div class="carousel-caption d-none d-md-block">
                                 <em><h5 class="textoCarrousel">Prestige Porcelain Kindred</h5></em>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="https://static.wikia.nocookie.net/leagueoflegends/images/a/a0/Kindred_SpiritBlossomSkin.jpg/revision/latest/scale-to-width-down/1000?cb=20200722230610" class="d-block w-100 imgCarrousel" alt="Kindred img2">
+                            <img src="Fotos/Kindred_SpiritBlossomSkin.jpg" class="d-block w-100 imgCarrousel" alt="Kindred img2">
                             <div class="carousel-caption d-none d-md-block">
                                 <em><h5 class="textoCarrousel">Spirit Blossom Kindred</h5></em>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="https://static.wikia.nocookie.net/leagueoflegends/images/8/89/Kindred_PorcelainSkin.jpg/revision/latest/scale-to-width-down/1000?cb=20220105205742" class="d-block w-100 imgCarrousel" alt="Kindred img3">
+                            <img src="Fotos/Kindred_PorcelainSkin.jpg" class="d-block w-100 imgCarrousel" alt="Kindred img3">
                             <div class="carousel-caption d-none d-md-block">
                               <em><h5 class="textoCarrousel">Porcelain Kindred</h5></em>
                             </div>
@@ -129,19 +129,19 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="https://static.wikia.nocookie.net/leagueoflegends/images/1/19/Fiddlesticks_UnionJackSkin.jpg/revision/latest/scale-to-width-down/1000?cb=20210611191209" class="d-block w-100 imgCarrousel" alt="Fiddlesticks img1">
+                            <img src="Fotos/Fiddlesticks_UnionJackSkin.jpg" class="d-block w-100 imgCarrousel" alt="Fiddlesticks img1">
                             <div class="carousel-caption d-none d-md-block">
                               <em><h5 class="textoCarrousel">Union Jack Fiddlesticks</h5></em>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="https://static.wikia.nocookie.net/leagueoflegends/images/b/b9/Fiddlesticks_BanditoSkin.jpg/revision/latest/scale-to-width-down/1000?cb=20210611190334" class="d-block w-100 imgCarrousel" alt="Fiddlesticks img2">
+                            <img src="Fotos/Fiddlesticks_BanditoSkin.jpg" class="d-block w-100 imgCarrousel" alt="Fiddlesticks img2">
                             <div class="carousel-caption d-none d-md-block">
                               <em><h5 class="textoCarrousel">Bandito Fiddlesticks</h5></em>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="https://static.wikia.nocookie.net/leagueoflegends/images/2/22/Fiddlesticks_StarNemesisSkin.jpg/revision/latest/scale-to-width-down/1000?cb=20220623023303" class="d-block w-100 imgCarrousel" alt="Fiddlesticks img3">
+                            <img src="Fotos/Fiddlesticks_StarNemesisSkin.jpg" class="d-block w-100 imgCarrousel" alt="Fiddlesticks img3">
                             <div class="carousel-caption d-none d-md-block">
                               <nm><h5 class="textoCarrousel">Star Nemesis Fiddlesticks</h5></nm>
                             </div>
@@ -166,7 +166,7 @@
                 <!--Pyke-->
                 <div>
                     <div class="card Tarjeta" id="CPyke">
-                        <img src="https://static.wikia.nocookie.net/leagueoflegends/images/d/d6/Pyke_OriginalCentered.jpg/revision/latest/scale-to-width-down/1000?cb=20181027204458" class="card-img-top" alt="Pyke default img">
+                        <img src="Fotos/DPyke.jpg" class="card-img-top" alt="Pyke default img">
                         <div class="card-body">
                           <em><h5 class="card-title">Pyke - el Destripador del Muelle Rojo</h5></em>
                           <a href="https://www.leagueoflegends.com/es-mx/champions/pyke/" target="_blank" rel="noopener noreferrer" class="btn btn-primary botonInfo">Mas informacion</a>
@@ -177,7 +177,7 @@
                 <!--Kindred-->
                 <div>
                     <div class="card Tarjeta" id="CKindred">
-                        <img src="https://static.wikia.nocookie.net/leagueoflegends/images/e/e0/Kindred_OriginalCentered.jpg/revision/latest/scale-to-width-down/1000?cb=20180414203329" class="card-img-top" alt="Kindred default img">
+                        <img src="Fotos/DKindred.jpg" class="card-img-top" alt="Kindred default img">
                         <div class="card-body">
                           <em><h5 class="card-title">Kindred - los Cazadores Eternos</h5></em>
                           <a href="https://www.leagueoflegends.com/es-mx/champions/kindred/" target="_blank" rel="noopener noreferrer" class="btn btn-primary botonInfo">Mas informacion</a>
@@ -189,7 +189,7 @@
                 <!--Fiddlesticks-->
                 <div>
                     <div class="card Tarjeta" id="CFiddlesticks">
-                        <img src="https://static.wikia.nocookie.net/leagueoflegends/images/a/a6/Fiddlesticks_OriginalCentered.jpg/revision/latest/scale-to-width-down/1000?cb=20200317225020" class="card-img-top" alt="Fiddlesticks default img">
+                        <img src="Fotos/DFiddlesticks.jpg" class="card-img-top" alt="Fiddlesticks default img">
                         <div class="card-body">
                           <em><h5 class="card-title">Fiddlesticks - el Terror Ancestral</h5></em>
                           <a href="https://www.leagueoflegends.com/es-mx/champions/fiddlesticks/" target="_blank" rel="noopener noreferrer" class="btn btn-primary botonInfo">Mas informacion</a>
