--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <!--Pyke-->
                 <hr id="TituloPyke">
                 <em><h2 class="TituloSeccion">Pyke</h2></em>
-                <div>
-                    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                <div class="row justify-content-center">
+                    <div id="carouselExampleCaptions" class="carousel slide col-8" data-ride="carousel">
                         <ol class="carousel-indicators">
                           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
                           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -49,19 +49,19 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="Fotos/Pyke_AshenKnightSkin.jpg" class="d-block w-100 imgCarrousel" alt="Pyke img1">
+                            <img src="Fotos/Pyke_AshenKnightSkin.jpg" class="imgCarrousel" alt="Pyke img1">
                             <div class="carousel-caption d-none d-md-block">
                               <em><h5 class="textoCarrousel">Ashen Knight Pyke</h5></em>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="Fotos/Pyke_EmpyreanSkin.jpg" class="d-block w-100 imgCarrousel" alt="Pyke img2">
+                            <img src="Fotos/Pyke_EmpyreanSkin.jpg" class="imgCarrousel" alt="Pyke img2">
                             <div class="carousel-caption d-none d-md-block">
                               <em><h5 class="textoCarrousel">Empyrean Pyke</h5></em>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="Fotos/Pyke_PrestigeSoulFighterSkin.jpg" class="d-block w-100 imgCarrousel" alt="Pyke img3">
+                            <img src="Fotos/Pyke_PrestigeSoulFighterSkin.jpg" class="imgCarrousel" alt="Pyke img3">
                             <div class="carousel-caption d-none d-md-block">
                               <em><h5 class="textoCarrousel">Prestige Soul Fighter Pyke</h5></em>
                             </div>
@@ -81,8 +81,8 @@
                 <!--Kindred-->
                 <hr id="TituloKindred">
                 <em><h2 class="TituloSeccion">Kindred</h2></em>
-                <div>
-                    <div id="carouselExampleCaptions2" class="carousel slide" data-ride="carousel">
+                <div class="row justify-content-center">
+                    <div id="carouselExampleCaptions2" class="carousel slide col-8" data-ride="carousel">
                         <ol class="carousel-indicators">
                           <li data-target="#carouselExampleCaptions2" data-slide-to="0" class="active"></li>
                           <li data-target="#carouselExampleCaptions2" data-slide-to="1"></li>
@@ -90,19 +90,19 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="Fotos/Kindred_PrestigePorcelainSkin.jpg" class="d-block w-100 imgCarrousel" alt="Kingred img1">
+                            <img src="Fotos/Kindred_PrestigePorcelainSkin.jpg" class="imgCarrousel" alt="Kingred img1">
                             <div class="carousel-caption d-none d-md-block">
                                 <em><h5 class="textoCarrousel">Prestige Porcelain Kindred</h5></em>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="Fotos/Kindred_SpiritBlossomSkin.jpg" class="d-block w-100 imgCarrousel" alt="Kindred img2">
+                            <img src="Fotos/Kindred_SpiritBlossomSkin.jpg" class="imgCarrousel" alt="Kindred img2">
                             <div class="carousel-caption d-none d-md-block">
                                 <em><h5 class="textoCarrousel">Spirit Blossom Kindred</h5></em>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="Fotos/Kindred_PorcelainSkin.jpg" class="d-block w-100 imgCarrousel" alt="Kindred img3">
+                            <img src="Fotos/Kindred_PorcelainSkin.jpg" class="imgCarrousel" alt="Kindred img3">
                             <div class="carousel-caption d-none d-md-block">
                               <em><h5 class="textoCarrousel">Porcelain Kindred</h5></em>
                             </div>
@@ -122,8 +122,8 @@
                 <!--Fiddlesticks-->
                 <hr id="TituloFiddlesticks">
                 <em><h2 class="TituloSeccion">Fiddlesticks</h2></em>
-                <div>
-                    <div id="carouselExampleCaptions3" class="carousel slide" data-ride="carousel">
+                <div class="row justify-content-center">
+                    <div id="carouselExampleCaptions3" class="carousel slide col-8" data-ride="carousel">
                         <ol class="carousel-indicators">
                           <li data-target="#carouselExampleCaptions3" data-slide-to="0" class="active"></li>
                           <li data-target="#carouselExampleCaptions3" data-slide-to="1"></li>
@@ -131,19 +131,19 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="Fotos/Fiddlesticks_UnionJackSkin.jpg" class="d-block w-100 imgCarrousel" alt="Fiddlesticks img1">
+                            <img src="Fotos/Fiddlesticks_UnionJackSkin.jpg" class="imgCarrousel" alt="Fiddlesticks img1">
                             <div class="carousel-caption d-none d-md-block">
                               <em><h5 class="textoCarrousel">Union Jack Fiddlesticks</h5></em>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="Fotos/Fiddlesticks_BanditoSkin.jpg" class="d-block w-100 imgCarrousel" alt="Fiddlesticks img2">
+                            <img src="Fotos/Fiddlesticks_BanditoSkin.jpg" class="imgCarrousel" alt="Fiddlesticks img2">
                             <div class="carousel-caption d-none d-md-block">
                               <em><h5 class="textoCarrousel">Bandito Fiddlesticks</h5></em>
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="Fotos/Fiddlesticks_StarNemesisSkin.jpg" class="d-block w-100 imgCarrousel" alt="Fiddlesticks img3">
+                            <img src="Fotos/Fiddlesticks_StarNemesisSkin.jpg" class="imgCarrousel" alt="Fiddlesticks img3">
                             <div class="carousel-caption d-none d-md-block">
                               <nm><h5 class="textoCarrousel">Star Nemesis Fiddlesticks</h5></nm>
                             </div>
@@ -202,6 +202,8 @@
             </section>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     </body>
 
 </html>
